Cleanup code (pixle-game) Landscape notification is now part of the app component (pixle-landing) Fix header issues Scrollbar is now thinner in Mozilla Firefox (other browsers might not support this feature)

--- a/local/stylesheets/scss/styles.scss
+++ b/local/stylesheets/scss/styles.scss
@@ -30,6 +30,8 @@
 * {
   margin: 0;
   padding: 0;
+
+  scrollbar-width: thin !important;
 }
 
 *::selection {
