--- a/projects/pixle-game/local/stylesheets/scss/app.component.scss
+++ b/projects/pixle-game/local/stylesheets/scss/app.component.scss
@@ -1,4 +1,43 @@
+@use "sass:map";
+
+@import '../../../../../local/stylesheets/mixins/themes';
+@import '../../../../../local/stylesheets/mixins/mixins';
+
 // app component stylesheet
 main {
   flex: 1 0 0%;
+}
+
+.mobile-landscape-popup {
+  display: none;
+  visibility: hidden;
+
+  .mobile-landscape-popup-wrapper {
+    padding: 11px 21px;
+    background-color: var(--default-theme-four, map.get($default-color-palette, 4));
+
+    p {
+      font-size: calc(1em + 1.65vmin);
+      color: var(--default-theme-one, map.get($default-color-palette, 1));
+    }
+  }
+}
+
+.pix-popup-wrapper {
+  @include alignment_old();
+  width: 100%;
+  pointer-events: none;
+}
+
+// ########### Disable if orientation is landscape (only for mobile)
+@media only screen and (max-height: 615px) and (orientation: landscape) {
+  .component-app-content {
+    display: none;
+    visibility: hidden;
+  }
+
+  .mobile-landscape-popup {
+    @include flexbox();
+    visibility: visible;
+  }
 }
