--- a/projects/pixle-landing/local/stylesheets/scss/pix-home.component.scss
+++ b/projects/pixle-landing/local/stylesheets/scss/pix-home.component.scss
@@ -1,5 +1,6 @@
 @use "sass:map";
 
+@import '../../../../../local/stylesheets/mixins/variables';
 @import '../../../../../local/stylesheets/mixins/fonts';
 @import '../../../../../local/stylesheets/mixins/themes';
 @import '../../../../../local/stylesheets/mixins/mixins';
@@ -32,7 +33,7 @@ section#welcome {
         display: block;
 
         &.add {
-          opacity: .65;
+          color: rgba($default-headline-color, .65);
         }
       }
     }
